Do not include datatype in JSON serialization of strings.